Mail: Disable 'Export to PDF' on drag & drop

In doesn't work due to WebKitGTK bug:
https://bugs.webkit.org/show_bug.cgi?id=212814

Related to https://gitlab.gnome.org/GNOME/evolution/-/issues/974